refactored data in manifests

--- a/k8s/secret.yml
+++ b/k8s/secret.yml
@@ -5,8 +5,8 @@ metadata:
   namespace: todo
 type: Opaque
 data:
-  DB_USER: todo-nest-app-user
-  DB_USER_PASSWORD: 0ETUd<8L2_uO@+DB
-  DB_PASSWORD: wHHRyKu3Il441XKS!
-  JWT_ACCESS_SECRET: l+Q.e&%#8~))!ahl
-  JWT_REFRESH_SECRET: 9b$!#@nHhTgYzXcV
+  DB_USER: "todo-nest-app-user"
+  DB_USER_PASSWORD: "0ETUd<8L2_uO@+DB"
+  DB_PASSWORD: "wHHRyKu3Il441XKS!"
+  JWT_ACCESS_SECRET: "l+Q.e&%#8~))!ahl"
+  JWT_REFRESH_SECRET: "9b$!#@nHhTgYzXcV"
