type of data changed to stringData

--- a/k8s/secret.yml
+++ b/k8s/secret.yml
@@ -3,7 +3,7 @@ kind: Secret
 metadata:
   name: todo-secret
 type: Opaque
-data:
+stringData:
   DB_USER: "todo-nest-app-user"
   DB_USER_PASSWORD: "0ETUd<8L2_uO@+DB"
   DB_PASSWORD: "wHHRyKu3Il441XKS!"
