--- a/k8s/deployment.yml
+++ b/k8s/deployment.yml
@@ -12,7 +12,7 @@ spec:
       labels:
         app: todo-app
     spec:
-      serviceAccountName: todo-app-sa
+      serviceAccountName: ci-cd-sa
       containers:
         - name: todo-app
           image: europe-west4-docker.pkg.dev/wide-net-466915-c6/todo-nest-app-repo/todo-app:latest
