--- a/k8s/deployment.yml
+++ b/k8s/deployment.yml
@@ -32,13 +32,13 @@ spec:
             - containerPort: 3000
           readinessProbe:
             httpGet:
-              path: api/health
+              path: api/liveliness/health
               port: 3000
             initialDelaySeconds: 5
             periodSeconds: 10
           livenessProbe:
             httpGet:
-              path: api/health
+              path: api/liveliness/health
               port: 3000
             initialDelaySeconds: 15
             periodSeconds: 20
