--- a/k8s/deployment.yml
+++ b/k8s/deployment.yml
@@ -23,11 +23,12 @@ spec:
                 name: todo-secret
           resources:
             limits:
+              cpu: "1"
+              memory: "1024Mi"
+            requests:
               cpu: "500m"
               memory: "512Mi"
-            requests:
-              cpu: "250m"
-              memory: "256Mi"
+
           ports:
             - containerPort: 3000
           readinessProbe:
