Rename DB_USER to DB_USERNAME in secret.yml

--- a/k8s/secret.yml
+++ b/k8s/secret.yml
@@ -4,7 +4,7 @@ metadata:
   name: todo-secret
 type: Opaque
 stringData:
-  DB_USER: "todo-nest-app-user"
+  DB_USERNAME: "todo-nest-app-user"
   DB_USER_PASSWORD: "0ETUd<8L2_uO@+DB"
   DB_PASSWORD: "wHHRyKu3Il441XKS!"
   JWT_ACCESS_SECRET: "l+Q.e&%#8~))!ahl"
