--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -54,12 +54,20 @@ jobs:
         run: |
           IMAGE_REGISTRY="${{ env.REGION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/todo-nest-app-repo"
           docker push "$IMAGE_REGISTRY/todo-app:${{ env.IMAGE_TAG }}"
+      - name: Create Secrets
+        run: |
+          kubectl create secret generic app-secrets \
+            --from-literal=DB_HOST=${{ secrets.DB_HOST }} \
+            --from-literal=DB_USER=${{ secrets.DB_USER }} \
+            --from-literal=DB_PASSWORD=${{ secrets.DB_PASSWORD }} \
+            --from-literal=DB_NAME=${{ secrets.DB_NAME }} \
+            --from-literal=JWT_SECRET=${{ secrets.JWT_SECRET }} \
+            --dry-run=client -o yaml | kubectl apply -f -
 
       - name: Deploy to GKE
         run: |
           IMAGE_REGISTRY="${{ env.REGION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/todo-nest-app-repo"
           kubectl apply -f k8s/config-map.yml
-          kubectl apply -f k8s/secret.yml
           kubectl apply -f k8s/deployment.yml
           kubectl apply -f k8s/service.yml
 
